--- a/package.json
+++ b/package.json
@@ -3,11 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-schedule": "^24.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.4.0",
+    "dotenv": "^16.1.3",
+    "highcharts-react-official": "^3.2.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-awesome-calendar": "^1.0.14",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.7.4",
+    "react-calendar": "^4.8.0",
+    "react-calendar-timeline": "^0.28.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable-tabs": "^1.0.8",
+    "react-hot-toast": "^2.4.1",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
